<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_reader_content">
    <data>
        <import type="android.view.View"/>
        <import type="android.view.Gravity" />

        <variable
            name="toolbarReaderCenter"
            type="Boolean" />
    </data>

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:custom="http://schemas.android.com/apk/res/br.com.fenix.bilingualmangareader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/container_touch_demonstration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            layout="@layout/reader_touch_demonstration"/>

        <include
            android:id="@+id/container_clock_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin"
            android:visibility="gone"
            layout="@layout/reader_clock_battery"/>

        <include
            android:id="@+id/container_chapters_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/manga_chapter_margin_bottom"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            layout="@layout/list_reader_chapters"/>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_reader_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_toolbar_background"
            android:theme="@style/MainToolbarContentTheme"
            app:elevation="0dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_reader"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_navigator_header_size"
                app:popupTheme="@style/MainToolbarStyle"
                android:theme="@style/MainToolbarTheme">

                <LinearLayout
                    android:id="@+id/toolbar_title_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:gravity="center|start"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/toolbar_title_custom"
                        style="@style/ReaderToolbarTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/title_size" />

                    <TextView
                        android:id="@+id/toolbar_subtitle_custom"
                        style="@style/ReaderSubToolbarTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/title_small_size"/>
                </LinearLayout>
            </com.google.android.material.appbar.MaterialToolbar>

            <LinearLayout
                android:id="@+id/sub_toolbar"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="vertical"
                android:visibility="gone"
                android:background="@color/title_background_semitransparent">
                <TextView
                    android:id="@+id/ocr_language"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:autoLink="all"
                    android:gravity="center_vertical"
                    android:textColor="?attr/colorPrimaryInverse"
                    android:textSize="@dimen/floating_ocr_language_text_size" />
            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/nav_reader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/reader_nav_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="2dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/nav_reader_title"
                style="@style/TextTitle.PageNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_small_size" />

            <br.com.fenix.bilingualmangareader.view.components.DottedSeekBar
                android:id="@+id/reader_nav_reader_progress"
                style="@style/SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="2dp"
                android:minHeight="2dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:progressDrawable="@drawable/reader_nav_progress"
                android:thumb="@drawable/reader_nav_thumb"
                custom:dots_drawable="@drawable/ic_progress_dot"
                android:thumbOffset="6dp"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nav_previous_file"
            style="@style/Button.ReaderButtons.Navigator"
            android:layout_width="@dimen/reader_change_comic_size"
            android:layout_height="@dimen/reader_change_comic_size"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="85dp"
            android:contentDescription="@string/reading_button_previous_file"
            app:icon="@drawable/ico_animated_file_before"
            app:iconGravity="textStart"
            app:rippleColor="?attr/colorTertiary"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nav_next_file"
            style="@style/Button.ReaderButtons.Navigator"
            android:layout_width="@dimen/reader_change_comic_size"
            android:layout_height="@dimen/reader_change_comic_size"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="85dp"
            android:contentDescription="@string/reading_button_next_file"
            app:icon="@drawable/ico_animated_file_next"
            app:iconGravity="textStart"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:id="@+id/toolbar_reader_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/main_toolbar_background_inverse"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_screen_rotate"
                style="@style/Button.ReaderButtons"
                android:layout_width="@dimen/reader_button_width"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/reading_button_screen_rotate"
                android:minHeight="@dimen/popup_reader_button_min_height"
                app:icon="@drawable/ico_animated_screen_rotation_portrait" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_floating_popup"
                style="@style/Button.ReaderButtons"
                android:layout_width="@dimen/reader_button_width"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/reading_button_popup_floating"
                android:minHeight="@dimen/popup_reader_button_min_height"
                android:visibility="gone"
                app:icon="@drawable/ico_animated_floating_window" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_menu_ocr"
                style="@style/Button.ReaderButtons"
                android:layout_width="@dimen/reader_button_width"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/reading_button_menu_ocr"
                android:minHeight="@dimen/popup_reader_button_min_height"
                app:iconTint="@null"
                app:icon="@drawable/ico_animated_ocr" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_popup_subtitle"
                style="@style/Button.ReaderButtons"
                android:layout_width="@dimen/reader_button_width"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/reading_button_subtitle"
                android:minHeight="@dimen/popup_reader_button_min_height"
                app:iconTint="@null"
                app:icon="@drawable/ico_animated_translate" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_popup_color"
                style="@style/Button.ReaderButtons"
                android:layout_width="@dimen/reader_button_width"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/reading_button_color"
                android:minHeight="@dimen/popup_reader_button_min_height"
                app:icon="@drawable/ic_color_settings"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_menu_page_linked"
                style="@style/Button.ReaderButtons"
                android:layout_width="@dimen/reader_button_width"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/reading_button_page_linked"
                android:minHeight="@dimen/popup_reader_button_min_height"
                app:icon="@drawable/ico_animated_page_linked_insert" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_menu_file_link"
                style="@style/Button.ReaderButtons"
                android:layout_width="@dimen/reader_button_width"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/reading_button_file_link"
                android:minHeight="@dimen/popup_reader_button_min_height"
                app:icon="@drawable/ico_animated_file_link" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_floating_buttons"
                style="@style/Button.ReaderButtons"
                android:layout_width="@dimen/popup_reader_button_width"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/reading_button_floating_buttons"
                android:minHeight="@dimen/reader_button_width"
                app:icon="@drawable/ico_animated_floating_buttons" />

        </LinearLayout>
    </RelativeLayout>
</layout>
