...
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".view.ui.reader.ReaderActivity">

        <FrameLayout
            style="@style/AppBackground.Reader"
            android:id="@+id/root_frame_reader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="false"/>

        <include
            android:layout_width="match_parent"
...
