<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group>
        <item
            android:id="@+id/menu_library_content"
            android:icon="@drawable/ic_library"
            android:title="@string/menu_libraries">
            <menu android:id="@+id/menu_library_items">
                <item
                    android:id="@+id/menu_library_default"
                    android:icon="@drawable/ic_library"
                    android:orderInCategory="0"
                    android:title="@string/menu_library"/>
            </menu>
        </item>

        <item
            android:id="@+id/menu_history"
            android:icon="@drawable/ic_history"
            android:orderInCategory="100"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/menu_vocabulary"
            android:icon="@drawable/ico_animated_vocabulary"
            android:orderInCategory="100"
            android:title="@string/menu_vocabulary" />

        <item
            android:id="@+id/menu_configuration"
            android:icon="@drawable/ic_settings"
            android:orderInCategory="100"
            android:title="@string/menu_config" />

        <item
            android:id="@+id/menu_help"
            android:icon="@drawable/ic_help"
            android:orderInCategory="100"
            android:title="@string/menu_help" />

        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_about"
            android:orderInCategory="100"
            android:title="@string/menu_about" />
    </group>

</menu>